--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.mvc.view.suffix=.jsp
 
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.example.demo.model
-
+map-underscore-to-camel-case: true
 
 swagger.url=http://localhost:8080/v2/api-docs
 
